--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html>
 	<head>
 		<title>Email Sender</title>
-    <meta charset="UTF-8" />
-    <style>
-		  .input{
-			  width: 300px;
-		  }
+    	<meta charset="UTF-8" />
+    	<style>
+		  	.input{
+				width: 300px;
+		  	}
 		</style>
+		<script src="check.js"></script>
 	</head>
 	<body>
-		<form action="email.php" method="post">
+		<form id="email" action="email.php" method="post">
 			<table border="0">
 				<tr>
 					<td>To (Name): </td>
